--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 		<spring.version>5.1.2.RELEASE</spring.version>
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
-		<sonar.host.url>http://3.85.231.224:9000/</sonar.host.url>
+		<sonar.host.url>http://3.89.107.16:9000/</sonar.host.url>
 		<sonar.login>admin</sonar.login>
 		<sonar.password>123456</sonar.password>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -104,7 +104,7 @@
 	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>ABC Technologies Snapshot Nexus Repository </name>
-	      <url>http://34.201.45.100:8082/repository/abc-snapshot/</url>
+	      <url>http://18.233.147.100:8081/repository/test/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
